--- a/src/www/style.css
+++ b/src/www/style.css
@@ -75,3 +75,37 @@ summary::after {
 details[open] summary::after {
   transform: translateY(-50%) rotate(-90deg) !important;
 }
+
+/* icône point d'interrogation */
+#variable_help_icon {
+  position: absolute;  /* par rapport au parent de position : relative*/
+  top: 5px;
+  right: 20px;
+  display: inline-block;
+  color: #0072B2;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  padding: 2px 6px;
+  cursor: pointer;
+  font-size: 12px;
+  z-index: 10;
+}
+
+/* Texte d'infobulle */
+#variable_help_text {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 110%;
+  transform: translateY(0%);
+  z-index: 100;
+  width: 300px;
+  background-color: #fefefe;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0px 2px 6px rgba(0,0,0,0.2);
+  font-size: 12px;
+  line-height: 1.4;
+}
